--- a/docs/_includes/game_directory.html
+++ b/docs/_includes/game_directory.html
@@ -81,7 +81,7 @@
 	    				<div class="btn-group" role="group">
 	        				<button type="button" class="btn btn btn-dark" disabled>
 	        					<span class="fa-stack fa-1x">
-	        						<i class="fas fa-question"></i>
+	        						<i class="fas fa-calendar"></i>
 	        					</span>
 	        				</button>
 	        				<button type="button" class="btn btn-lg btn-info" disabled>Events<p class="text-light font-weight-light"> [Coming Soon]</p></button>
