--- a/docs/_includes/dbtable.html
+++ b/docs/_includes/dbtable.html
@@ -1,5 +1,3 @@
-<!-- Bootstrap, DataTables CSS -->
-{% include bootstrap_css.html %}
 <!--<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.1.1/css/responsive.bootstrap.min.css">-->
 <div>
 	<!-- nav tabs -->
@@ -18,9 +16,9 @@
 					<col width='15%' /> <!-- team     -->
 					<col width='30%' /> <!-- player   -->
 					<col width='10%' /> <!-- ssbmrank -->
-					<col width='10%' /> <!-- s-rank   -->
+					<col width='19%' /> <!-- s-rank   -->
 					<col width='10%' /> <!-- elo      -->
-					<col width='10%' /> <!-- glicko   -->
+					<col width='16%' /> <!-- glicko   -->
 				</colgroup>
 				<thead>
 					<tr class='header'>
@@ -42,7 +40,14 @@
 								Rank
 							{% endif %}
 						</th>
-						<th>S-Rank</th>
+						<th>S-Rank
+							<span class="fa-layers fa-fw">
+								<i class="fas fa-square" data-fa-transform="shrink-3 up-3"></i>
+								<span class="fa-layers-text fa-inverse" data-fa-transform="shrink-8 up-4 left-0.5" style="font-weight:400">
+									&alpha;
+								</span>
+							</span>
+						</th>
 						<th>ELO</th>
 						<th>Glicko-2</th>
 					</tr>
@@ -69,9 +74,9 @@
 					<col width='15%' /> <!-- team     -->
 					<col width='30%' /> <!-- player   -->
 					<col width='10%' /> <!-- ssbmrank -->
-					<col width='10%' /> <!-- s-rank   -->
+					<col width='19%' /> <!-- s-rank   -->
 					<col width='10%' /> <!-- elo      -->
-					<col width='10%' /> <!-- glicko   -->
+					<col width='16%' /> <!-- glicko   -->
 				</colgroup>
 				<thead>
 					<tr class='header'>
@@ -93,7 +98,14 @@
 								Rank
 							{% endif %}
 						</th>
-						<th>S-Rank</th>
+						<th>S-Rank
+							<span class="fa-layers fa-fw">
+								<i class="fas fa-square" data-fa-transform="shrink-3 up-3"></i>
+								<span class="fa-layers-text fa-inverse" data-fa-transform="shrink-8 up-4 left-0.5" style="font-weight:400">
+									&alpha;
+								</span>
+							</span>
+						</th>
 						<th>ELO</th>
 						<th>Glicko-2</th>
 					</tr>
@@ -120,9 +132,9 @@
 					<col width='15%' /> <!-- team     -->
 					<col width='30%' /> <!-- player   -->
 					<col width='10%' /> <!-- ssbmrank -->
-					<col width='10%' /> <!-- s-rank   -->
+					<col width='19%' /> <!-- s-rank   -->
 					<col width='10%' /> <!-- elo      -->
-					<col width='10%' /> <!-- glicko   -->
+					<col width='16%' /> <!-- glicko   -->
 				</colgroup>
 				<thead>
 					<tr class='header'>
@@ -144,7 +156,14 @@
 								Rank
 							{% endif %}
 						</th>
-						<th>S-Rank</th>
+						<th>S-Rank
+							<span class="fa-layers fa-fw">
+								<i class="fas fa-square" data-fa-transform="shrink-3 up-3"></i>
+								<span class="fa-layers-text fa-inverse" data-fa-transform="shrink-8 up-4 left-0.5" style="font-weight:400">
+									&alpha;
+								</span>
+							</span>
+						</th>
 						<th>ELO</th>
 						<th>Glicko-2</th>
 					</tr>
@@ -171,7 +190,6 @@
 {% include firebase_scripts.html %}
 
 <!-- jQuery, Bootstrap, DataTables, etc. imports -->
-{% include bootstrap_scripts.html %}
 {% include datatables_scripts.html %}
 
 <!-- populating page's table -->
