--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -1,6 +1,20 @@
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<a class="navbar-brand" href="#">SmashRanks</a>
-  {% for item in site.data.navigation %}
-    <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>{{ item.name }}</a>
-  {% endfor %}
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_main" aria-controls="navbar_main" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbar_main">
+  	<div class="navbar-nav">
+  	  {% for item in site.data.navigation %}
+		 <a {% if item.link == '/blog.html' %}
+		  class="nav-item nav-link disabled"
+		  {% elsif page.url == item.link %}
+		  class="nav-item nav-link active"
+		  {% else %}
+		  class="nav-item nav-link"
+		  {% endif %}
+		  href="{{ item.link }}">{{ item.name }}</a>
+  		{% endfor %}
+	</ul>
+  </div>
 </nav>
